GUI AlchApp fix, Add ItemGroup(not working yet)

--- a/src/main/resources/assets/elixir/models/block/alchemical_apparatus.json
+++ b/src/main/resources/assets/elixir/models/block/alchemical_apparatus.json
@@ -2,7 +2,8 @@
 	"credit": "Made with Blockbench",
 	"texture_size": [64, 64],
 	"textures": {
-		"1": "elixir:block/alchemical_apparatus_texture"
+		"1": "elixir:block/alchemical_apparatus_texture",
+		"particles": "elixir:block/alchemical_apparatus_texture"
 	},
 	"elements": [
 		{
